Wed Feb 10 19:27:58 UTC 2010  Jeff Parsons  <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:

Wed Feb 10 16:34:24 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:
        * TAO_IDL/be_include/be_visitor_xplicit_pre_proc.h:

          In the recreation of the home scope in the corresponding
          explicit interface, added support for eventtypes, which
          cannot be declared inside a home, but can be referenced.

Wed Feb 10 10:52:00 UTC 2010  Simon Massey  <sma at prismtech dot com>

        * examples/mfc/server.cpp:

          Fixed a long standing typo in mod that was committed by
          ChangeLogTag: Mon Mar  5 07:59:00 2001  Michael Kircher  <Michael.Kircher@mchp.siemens.de>
          He was adding ACE_TRY_ENV and ACE_TRY_CHECKS to the existing code,
          but put in an ACE_TRY_CHECK where an ACE_TRY_ENV was supposed to
          go. This has never been touched since and has missed the grand
          purge of this old excaption code as it didn't conform to the normal
          useage patterns. If TAO is built with #define ACE_LACKS_DEPRECATED_MACROS
          this caused this example to not build due to this missuse.

Wed Feb 10 10:43:11 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL_Test.mpc:
          Don't compile the 3821 RTI DDS generated files, they don't compile
          at this moment.

Tue Feb  9 22:55:11 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_root/root_cnh.cpp:
        * TAO_IDL/be/be_visitor_root/root_cns.cpp:
        * TAO_IDL/be_include/be_visitor_root/root_cnh.h:
        * TAO_IDL/be_include/be_visitor_root/root_cns.h:

          New visitors that create the files and streams
          for the connector header and source implementation
          generation.

        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/be/be_visitor_root.cpp:
        * TAO_IDL/be/be_codegen.cpp: