@@ -91,6 +91,8 @@ TAO::SSLIOP::Connection_Handler::open (void *)
     this->orb_core ()->orb_params ()->sock_rcvbuf_size ();
   protocol_properties.no_delay_ =
     this->orb_core ()->orb_params ()->nodelay ();
+  protocol_properties.keep_alive_ =
+    this->orb_core ()->orb_params ()->sock_keepalive (); 
 
   TAO_Protocols_Hooks *tph = this->orb_core ()->get_protocols_hooks ();
 
@@ -125,6 +127,20 @@ TAO::SSLIOP::Connection_Handler::open (void *)
                                 sizeof (protocol_properties.no_delay_)) == -1)
     return -1;
 #endif /* ! ACE_LACKS_TCP_NODELAY */
+
+  //support ORBKeepalive in SSL mode 
+  if (protocol_properties.keep_alive_)
+    {
+      if (this->peer ().
+          set_option (SOL_SOCKET,
+                      SO_KEEPALIVE,
+                      (void *) &protocol_properties.keep_alive_,
+                      sizeof (protocol_properties.keep_alive_)) == -1
+          && errno != ENOTSUP)
+        {
+          return -1;
+        }
+    } 
 
   if (this->transport ()->wait_strategy ()->non_blocking ())
     {
